--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+    <nav class="navbar navbar-default">
+    <a class="navbar-brand" href="#">Consultant's Friend</a>
+    <div class="container" id="navbarNav">
+    <ul class="nav navbar-nav mr-auto" routerLinkActive="active">
+      <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="register">Register</a></li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+<router-outlet></router-outlet>
+</div>
