--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,18 +1,4 @@
 <div class="col-md-6 col-md-offset-3">
-    <!--<h2>Register</h2>-->
-    <!--<form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal">-->
-    <!--<div class="form-group">-->
-    <!--<label class="col-md-3 control-label">First Name:</label>-->
-    <!--<input type="text" class="form-control" formControlName="firstName">-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-    <!--<label class="col-md-3 control-label">Password:</label>-->
-    <!--<input class="form-control" type="password" formControlName="password">-->
-    <!--</div>-->
-    <!--<p>-->
-    <!--<button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>-->
-    <!--</p>-->
-    <!--</form>-->
     <h1 class="well">Registration Form</h1>
     <div class="col-lg-12 well">
         <div class="row">
@@ -22,7 +8,7 @@
                         <div class="col-sm-6 form-group">
                             <label>First Name</label>
                             <input type="text" placeholder="Enter First Name Here.." class="form-control"
-                                   formControlName="fistName">
+                                   formControlName="firstName">
                         </div>
                         <div class="col-sm-6 form-group">
                             <label>Last Name</label>
