--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,17 @@
         <ul class="nav navbar-nav mr-auto" routerLinkActive="active">
             <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
-            <li class="nav-item"><a class="nav-link" routerLink="register">Register</a></li>
         </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="nav-item"><a class="nav-link" routerLink="register">Register</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="signin">Sign In</a></li>
+      </ul>
     </div>
 </nav>
 
 <div class="container">
     <router-outlet></router-outlet>
 </div>
+<footer>
+  <p>&copy; Cadekami 2017</p>
+</footer>
