--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -1,7 +1,10 @@
 @charset "utf-8";
 
-.columns {
-  -moz-column-width: 11.5em; /* Firefox */
-  -webkit-column-width: 11.5em; /* webkit, Safari, Chrome */
-  column-width: 11.5em;
+/*.columns {*/
+/*-moz-column-width: 11.5em; !* Firefox *!*/
+/*-webkit-column-width: 11.5em; !* webkit, Safari, Chrome *!*/
+/*column-width: 11.5em;*/
+/*}*/
+li {
+  cursor: pointer
 }
