--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -10,32 +10,23 @@
   </div>
   <hr/>
   <div class="container">
-    <div class="row">
-      <div class="col-md-3 col-md-9">
-        <div class="list-group" *ngFor="let contact of contacts">
-          <div href="#" class="list-group-item">
-            <div class="row">
-              <div class="col-xs-offset-3 col-xs-6 >">
-                <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="Scott Stevens"
-                     class="img-responsive img-circle"/>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-offset-3 ">
+    <ul class="list-group" *ngFor="let contact of contacts">
+      <li><a (click)="goToContact(contact)" class="list-group-item row">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="Scott Stevens"
+                 class="img-responsive img-circle" width="30"/>
+          </div>
+          <div class="col-md-8">
                 <h4 class="list-group-item-heading">{{contact.name}}</h4>
-              </div>
-              <div class="row">
-                <div class="col-xs-offset-3 col-xs-6">
+          </div>
+          <div class="col-md-2">
                   <span class="glyphicon glyphicon-envelope" data-toggle="tooltip" title="{{contact.email}}"></span>
                   <span class="glyphicon glyphicon-earphone" data-toggle="tooltip" title="{{contact.phone}}"></span>
                   <span class="glyphicon glyphicon-map-marker" data-toggle="tooltip" title="{{contact.address}}"></span>
-                </div>
-              </div>
-            </div>
-            <div class="clearfix"></div>
           </div>
         </div>
-      </div>
-    </div>
+      </a></li>
+    </ul>
   </div>
 </div>
